--- a/roles/wireguard/tasks/keys.yml
+++ b/roles/wireguard/tasks/keys.yml
@@ -47,3 +47,12 @@
     - "{{ users }}"
     - "{{ IP_subject_alt_name }}"
   no_log: true
+
+- name: Set permissions for public keys
+  file:
+    path: "{{ wireguard_pki_path }}/public/{{ item }}"
+    mode: '0644'
+  with_items:
+    - "{{ users }}"
+    - "{{ IP_subject_alt_name }}"
+  no_log: true
