--- a/roles/dns/tasks/dns_adblocking.yml
+++ b/roles/dns/tasks/dns_adblocking.yml
@@ -5,7 +5,7 @@
     dest: /usr/local/sbin/adblock.sh
     owner: root
     group: "{{ root_group | default('root') }}"
-    mode: 0755
+    mode: '0755'
 
 - name: Adblock script added to cron
   cron:
