--- a/roles/strongswan/tasks/ubuntu.yml
+++ b/roles/strongswan/tasks/ubuntu.yml
@@ -25,7 +25,7 @@
         content: " capability setpcap,"
         owner: root
         group: root
-        mode: 0644
+        mode: '0644'
       notify: restart strongswan
 
     - name: Ubuntu | Enforcing ipsec with apparmor
@@ -49,7 +49,7 @@
   file:
     path: /etc/systemd/system/{{ strongswan_service }}.service.d/
     state: directory
-    mode: 0755
+    mode: '0755'
     owner: root
     group: root
 
@@ -57,6 +57,7 @@
   template:
     src: 100-CustomLimitations.conf.j2
     dest: /etc/systemd/system/{{ strongswan_service }}.service.d/100-CustomLimitations.conf
+    mode: '0644'
   notify:
     - daemon-reload
     - restart strongswan
