--- a/config.cfg
+++ b/config.cfg
@@ -3,11 +3,12 @@
 # ============================================
 # TROUBLESHOOTING DEPLOYMENT ISSUES
 # ============================================
-# If your deployment fails with hidden/censored output, temporarily set:
-#   algo_no_log: false
-# This will show detailed error messages (including API responses).
+# If your deployment fails with hidden/censored output, temporarily set
+# algo_no_log to 'false' below. This will show detailed error messages
+# including API responses.
 # IMPORTANT: Set back to 'true' before sharing logs or screenshots!
 # ============================================
+algo_no_log: true  # Set to 'false' for debugging (shows sensitive data in output)
 
 # This is the list of users to generate.
 # Every device must have a unique user.
@@ -112,9 +113,6 @@ wireguard_PersistentKeepalive: 0
 local_service_ip: "{{ '172.16.0.1' | ansible.utils.ipmath(1048573 | random(seed=algo_server_name + ansible_fqdn)) }}"
 local_service_ipv6: "{{ 'fd00::1' | ansible.utils.ipmath(1048573 | random(seed=algo_server_name + ansible_fqdn)) }}"
 
-# Hide sensitive data in Ansible output during deployment (passwords, keys, etc.)
-# This is NOT related to privacy/logging on the VPN server itself
-algo_no_log: true
 
 congrats:
   common: |
