Fix typo: 'API ssecret' -> 'API secret' in CloudStack prompt

--- a/roles/cloud-cloudstack/tasks/prompts.yml
+++ b/roles/cloud-cloudstack/tasks/prompts.yml
@@ -12,7 +12,7 @@
 
     - pause:
         prompt: |
-          Enter the API ssecret (https://trailofbits.github.io/algo/cloud-cloudstack.html):
+          Enter the API secret (https://trailofbits.github.io/algo/cloud-cloudstack.html):
         echo: false
       register: _cs_secret
       when:
