Fix Vultr regions string conversion bug
The "Format regions" task was converting region dictionaries to strings
using {{ v }} in a Jinja2 loop, which caused the subsequent sort() to
fail with "object of type 'str' has no attribute 'country'".

Changed to directly assign the regions array from the API response,
preserving the dictionary objects with their country, city, id, and
other attributes.

Fixes the error: "object of type 'str' has no attribute 'country'"
when provisioning Vultr servers.

--- a/roles/cloud-vultr/tasks/prompts.yml
+++ b/roles/cloud-vultr/tasks/prompts.yml
@@ -29,10 +29,7 @@
 
 - name: Format regions
   set_fact:
-    regions: >-
-      [ {% for v in _vultr_regions.json['regions'] %}
-      {{ v }}{% if not loop.last %},{% endif %}
-      {% endfor %} ]
+    regions: "{{ _vultr_regions.json['regions'] }}"
 
 - name: Set regions as a fact
   set_fact:
