--- a/files/cloud-init/base.yml
+++ b/files/cloud-init/base.yml
@@ -30,12 +30,12 @@ users:
     shell: /bin/bash
     lock_passwd: true
     ssh_authorized_keys:
-      - "{{ lookup('file', SSH_keys.public) }}"
+      - "{{ lookup('file', SSH_keys.public) | string }}"
 
 write_files:
   - path: /etc/ssh/sshd_config
     content: |
-{{ lookup('template', 'files/cloud-init/sshd_config') | indent(width=6, first=True) }}
+{{ lookup('template', 'files/cloud-init/sshd_config') | string | indent(width=6, first=True) }}
 
 runcmd:
   - set -x
