--- a/config.cfg
+++ b/config.cfg
@@ -24,7 +24,9 @@ ipsec_enabled: true
 # if your network blocks this one. Be aware that 53/UDP (DNS) is blocked on some
 # mobile data networks.
 wireguard_enabled: true
-wireguard_port: 51820
+# wireguard_port: 53825
+wireguard_port: 59778
+wireguard_port_avoid: 51820
 
 # This feature allows you to configure the Algo server to send outbound traffic
 # through a different external IP address than the one you are establishing the VPN connection with.
@@ -59,13 +61,13 @@ dns_encryption: true
 # connected clients to reach each other, as well as other computers on the
 # same LAN as your Algo server (i.e. the "road warrior" setup). In this
 # case, you may also want to enable SMB/CIFS and NETBIOS traffic below.
-BetweenClients_DROP: true
+BetweenClients_DROP: false
 
 # Block SMB/CIFS traffic
-block_smb: true
+block_smb: false
 
 # Block NETBIOS traffic
-block_netbios: true
+block_netbios: false
 
 # Your Algo server will automatically install security updates. Some updates
 # require a reboot to take effect but your Algo server will not reboot itself
@@ -73,8 +75,8 @@ block_netbios: true
 # which case a reboot will take place if necessary at the time specified (as
 # HH:MM) in the time zone of your Algo server. The default time zone is UTC.
 unattended_reboot:
-  enabled: false
-  time: 06:00
+  enabled: true
+  time: 02:00
 
 ### Advanced users only below this line ###
 
