Add support for XRAY protocol

--- a/config.cfg
+++ b/config.cfg
@@ -30,6 +30,13 @@ ipsec_enabled: true
 wireguard_enabled: true
 wireguard_port: 51820  # Change if blocked by your network (avoid 53/UDP)
 
+# Stealth VPN (VLESS + XTLS-Reality) - undetectable by DPI
+xray_enabled: true
+xray_port: 443
+xray_reality_dest: "www.microsoft.com:443"  # Target site to mimic
+xray_reality_sni: "www.microsoft.com"       # SNI for TLS handshake
+xray_flow: "xtls-rprx-vision"               # XTLS flow control
+
 # Use different IP for outbound traffic (DigitalOcean only)
 alternative_ingress_ip: false
 
@@ -159,14 +166,14 @@ cloud_providers:
       type: Standard_LRS
     image:
       publisher: Canonical
-      offer: 0001-com-ubuntu-minimal-jammy-daily
-      sku: minimal-22_04-daily-lts
+      offer: ubuntu-24_04-lts
+      sku: server
       version: latest
   digitalocean:
     # See docs for extended droplet options, pricing, and availability.
     # Possible values: 's-1vcpu-512mb-10gb', 's-1vcpu-1gb', ...
     size: s-1vcpu-1gb
-    image: "ubuntu-22-04-x64"
+    image: "ubuntu-24-04-x64"
   ec2:
     # Change the encrypted flag to "false" to disable AWS volume encryption.
     encrypted: true
@@ -175,7 +182,7 @@ cloud_providers:
     use_existing_eip: false
     size: t2.micro
     image:
-      name: "ubuntu-jammy-22.04"
+      name: "ubuntu-noble-24.04"
       arch: x86_64
       owner: "099720109477"
     # Change instance_market_type from "on-demand" to "spot" to launch a spot
@@ -183,31 +190,31 @@ cloud_providers:
     instance_market_type: on-demand
   gce:
     size: e2-micro
-    image: ubuntu-2204-lts
+    image: ubuntu-2404-lts
     external_static_ip: false
   lightsail:
     size: nano_2_0
-    image: ubuntu_22_04
+    image: ubuntu_24_04
   scaleway:
     size: DEV1-S
-    image: Ubuntu 22.04 Jammy Jellyfish
+    image: Ubuntu 24.04 Noble Numbat
     arch: x86_64
   hetzner:
     server_type: cpx22
-    image: ubuntu-22.04
+    image: ubuntu-24.04
   openstack:
     flavor_ram: ">=512"
-    image: Ubuntu-22.04
+    image: Ubuntu-24.04
   cloudstack:
     size: Micro
-    image: Linux Ubuntu 22.04 LTS 64-bit
+    image: Linux Ubuntu 24.04 LTS 64-bit
     disk: 10
   vultr:
-    os: Ubuntu 22.04 LTS x64
+    os: Ubuntu 24.04 LTS x64
     size: vc2-1c-1gb
   linode:
     type: g6-nanode-1
-    image: linode/ubuntu22.04
+    image: linode/ubuntu24.04
   local:
 
 fail_hint:
