Fix parsing keys for X-Ray protocol

--- a/roles/xray/tasks/keys.yml
+++ b/roles/xray/tasks/keys.yml
@@ -16,11 +16,11 @@
 
     - name: Parse private key
       set_fact:
-        xray_reality_private_key: "{{ xray_x25519_output.stdout_lines[0] | regex_replace('^Private key: ', '') }}"
+        xray_reality_private_key: "{{ xray_x25519_output.stdout_lines[0] | regex_replace('^PrivateKey: ', '') }}"
 
     - name: Parse public key
       set_fact:
-        xray_reality_public_key: "{{ xray_x25519_output.stdout_lines[1] | regex_replace('^Public key: ', '') }}"
+        xray_reality_public_key: "{{ xray_x25519_output.stdout_lines[1] | regex_replace('^Password: ', '') }}"
 
     - name: Generate short ID
       set_fact:
