--- a/server.yml
+++ b/server.yml
@@ -174,6 +174,7 @@
                   IP_subject_alt_name: {{ IP_subject_alt_name }}
                   ipsec_enabled: {{ ipsec_enabled }}
                   wireguard_enabled: {{ wireguard_enabled }}
+                  xray_enabled: {{ xray_enabled }}
                   local_service_ip: {{ local_service_ip }}
                   local_service_ipv6: {{ local_service_ipv6 }}
                   {% if tests | default(false) | bool %}
