--- a/config.cfg
+++ b/config.cfg
@@ -25,13 +25,14 @@ users:
 # SSH port for cloud deployments (doesn't apply to existing Ubuntu servers)
 ssh_port: 4160
 
-# VPN protocols to deploy
-ipsec_enabled: true
-wireguard_enabled: true
+# VPN protocols to deploy (defaults, can be overridden in interactive mode)
+ipsec_enabled_default: true
+wireguard_enabled_default: true
+xray_enabled_default: true
+
 wireguard_port: 51820  # Change if blocked by your network (avoid 53/UDP)
 
-# Stealth VPN (VLESS + XTLS-Reality) - undetectable by DPI
-xray_enabled: true
+# Stealth VPN (VLESS + XTLS-Reality)
 xray_port: 443
 xray_reality_dest: "www.microsoft.com:443"  # Target site to mimic
 xray_reality_sni: "www.microsoft.com"       # SNI for TLS handshake
