--- a/tests/fixtures/test_variables.yml
+++ b/tests/fixtures/test_variables.yml
@@ -114,6 +114,33 @@ provider_dns_servers:
   - 1.0.0.1
 ansible_ssh_private_key_file: ~/.ssh/id_rsa
 
+# Xray/VLESS+Reality
+xray_enabled: true
+xray_port: 443
+xray_listen_addr: "0.0.0.0"
+xray_flow: "xtls-rprx-vision"
+xray_reality_dest: "www.microsoft.com:443"
+xray_reality_sni: "www.microsoft.com"
+xray_reality_private_key: "MOCK_PRIVATE_KEY_BASE64"
+xray_reality_public_key: "MOCK_PUBLIC_KEY_BASE64"
+xray_reality_short_id: "abcd1234"
+xray_pki_path: "configs/10.0.0.1/xray"
+xray_log_path: "/var/log/xray"
+xray_users:
+  - alice
+  - bob
+  - charlie
+xray_user_uuids:
+  alice: "11111111-1111-1111-1111-111111111111"
+  bob: "22222222-2222-2222-2222-222222222222"
+  charlie: "33333333-3333-3333-3333-333333333333"
+algo_server_name: test-algo-vpn
+
+# SSTP (future, placeholder)
+sstp_enabled: false
+sstp_port: 443
+sstp_network: 10.50.0.0/16
+
 # Defaults
 inventory_hostname: localhost
 hostvars:
