Remove unexpected edits in config

--- a/config.cfg
+++ b/config.cfg
@@ -20,6 +20,7 @@ users:
   - laptop
   - desktop
 
+
 ### Review these options BEFORE you run Algo, as they are very difficult/impossible to change after the server is deployed.
 
 # SSH port for cloud deployments (doesn't apply to existing Ubuntu servers)
@@ -52,26 +53,15 @@ adblock_lists:
 # DNS encryption (required if using ad blocking)
 dns_encryption: true
 
-# Block traffic between connected clients. Change this to false to enable
-# connected clients to reach each other, as well as other computers on the
-# same LAN as your Algo server (i.e. the "road warrior" setup). In this
-# case, you may also want to enable SMB/CIFS and NETBIOS traffic below.
-BetweenClients_DROP: false
+# Client isolation (set false for "road warrior" setup where clients can reach each other)
+BetweenClients_DROP: true
+block_smb: true          # Block SMB/CIFS traffic
+block_netbios: true      # Block NETBIOS traffic
 
-# Block SMB/CIFS traffic
-block_smb: false
-
-# Block NETBIOS traffic
-block_netbios: false
-
-# Your Algo server will automatically install security updates. Some updates
-# require a reboot to take effect but your Algo server will not reboot itself
-# automatically unless you change 'enabled' below from 'false' to 'true', in
-# which case a reboot will take place if necessary at the time specified (as
-# HH:MM) in the time zone of your Algo server. The default time zone is UTC.
+# Automatic reboot for security updates (time in server's timezone, default UTC)
 unattended_reboot:
-  enabled: true
-  time: 02:00
+  enabled: false
+  time: 06:00
 
 ### Privacy Settings ###
 # StrongSwan connection logging (-1 = disabled, 2 = debug)
@@ -167,14 +157,14 @@ cloud_providers:
       type: Standard_LRS
     image:
       publisher: Canonical
-      offer: ubuntu-24_04-lts
-      sku: server
+      offer: 0001-com-ubuntu-minimal-jammy-daily
+      sku: minimal-22_04-daily-lts
       version: latest
   digitalocean:
     # See docs for extended droplet options, pricing, and availability.
     # Possible values: 's-1vcpu-512mb-10gb', 's-1vcpu-1gb', ...
     size: s-1vcpu-1gb
-    image: "ubuntu-24-04-x64"
+    image: "ubuntu-22-04-x64"
   ec2:
     # Change the encrypted flag to "false" to disable AWS volume encryption.
     encrypted: true
@@ -183,7 +173,7 @@ cloud_providers:
     use_existing_eip: false
     size: t2.micro
     image:
-      name: "ubuntu-noble-24.04"
+      name: "ubuntu-jammy-22.04"
       arch: x86_64
       owner: "099720109477"
     # Change instance_market_type from "on-demand" to "spot" to launch a spot
@@ -191,31 +181,31 @@ cloud_providers:
     instance_market_type: on-demand
   gce:
     size: e2-micro
-    image: ubuntu-2404-lts
+    image: ubuntu-2204-lts
     external_static_ip: false
   lightsail:
     size: nano_2_0
-    image: ubuntu_24_04
+    image: ubuntu_22_04
   scaleway:
     size: DEV1-S
-    image: Ubuntu 24.04 Noble Numbat
+    image: Ubuntu 22.04 Jammy Jellyfish
     arch: x86_64
   hetzner:
     server_type: cpx22
-    image: ubuntu-24.04
+    image: ubuntu-22.04
   openstack:
     flavor_ram: ">=512"
-    image: Ubuntu-24.04
+    image: Ubuntu-22.04
   cloudstack:
     size: Micro
-    image: Linux Ubuntu 24.04 LTS 64-bit
+    image: Linux Ubuntu 22.04 LTS 64-bit
     disk: 10
   vultr:
-    os: Ubuntu 24.04 LTS x64
+    os: Ubuntu 22.04 LTS x64
     size: vc2-1c-1gb
   linode:
     type: g6-nanode-1
-    image: linode/ubuntu24.04
+    image: linode/ubuntu22.04
   local:
 
 fail_hint:
